<resources>
    <string name="app_name">Trivio</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to menu pages -->
    <string name="manage_wifi">Manage Wifi</string>
    <string name="pick_category">Pick a Category</string>
    <string name="view_history">View Fact History</string>
    <string name="logout">Logout</string>

    <!-- Strings related to Wifi menu -->
    <string name="view_saved_wifi">View saved networks</string>
    <string name="connect_wifi">Choose Network Connection</string>
    <string name="no_networks">No Networks Detected.</string>
    <string name="connecting_wifi">Connecting to Wifi</string>
    <string name="connect_phone">Connect to Toy\'s Wifi</string>
    <string name="waiting_connection">Waiting for connection…</string>
    <string name="connect_instructions">First, go to the phone wifi menu and connect to the Trivia WiFi network.</string>
    <string name="Next">Next</string>
    <string name="connect">Connect</string>
    <string name="disconnected">Disconnected from Trivio WiFi</string>
    <string name="unable_to_connect">Error. Unable to Connect.</string>
    <string name="successful_connect">Successfully connected Trivio to WiFi.</string>
    <string name="sent_credentials">Sent credentials to toy. Check LED status of toy to see if successfully connected.</string>

    <!-- Strings related to History page -->
    <string name="fact_history">Fact History</string>
    <string name="no_facts">No facts to display.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
