<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_phone_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triviathrowtoy.trivio.CheckPhoneConnectionActivity">

    <TextView
        android:id="@+id/connectPhone"
        style="@style/TrivioHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_phone"
        android:paddingBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/connect_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/connectPhone"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:text="@string/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/nextButton"
        android:onClick="goToManageWifi"
        style="@style/Widget.AppCompat.Button"
        android:textColor="?android:attr/textColorSecondaryInverseNoDisable" />

    <TextView
        android:text="Waiting for connection..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/waitingConnection"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/connect_phone_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/waitingConnection"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
